--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">td-test-2</string>
     <string name="pesanhasil_klasifikasi">berdasarkan riwayat kesehatan anda menunjukan bahwa %1$s \n\ndetail terkait \n%2$s</string>
+
+    <string name="pref_key_notify">key_notification</string>
+    <string name="notification_format">%3$s | %1$s - %2$s </string>
 </resources>
